[project]
name = "waasng-release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.11"
dependencies = [
    "alembic==1.16.4",
    "asttokens==3.0.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "filelock==3.13.1",
    "fonttools==4.58.0",
    "fsspec==2024.6.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.2.3",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.5.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.7",
    "line-profiler==5.0.0",
    "mako==1.3.10",
    "markupsafe==2.1.5",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "optuna==4.4.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "requests==2.32.3",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tomli==2.2.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.3.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "widgetsnbextension==4.0.14",
    "zipp==3.21.0",
]
